# marketplace-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  readme_rus.md
scripts/: camofox-bridge.py  install-hermes-mcp.sh  live_canary.py  smoke-search.py  test-mcp-client.py
src/marketplaces_mcp/: __init__.py  __main__.py
src/marketplaces_mcp/adapters/: __init__.py  avito.py  base.py  ozon.py  wildberries.py  yandex_market.py
src/marketplaces_mcp/core/: __init__.py  artifacts.py  config.py  matching.py  models.py  normalize.py  reviews.py
src/marketplaces_mcp/mcp_server/: __init__.py  server.py
tests/: test_adapters_fixtures.py  test_matching.py  test_mcp_tools.py  test_normalize.py  test_reviews.py
