[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "marketplaces-mcp"
version = "0.1.0"
description = "Read-only marketplace MCP for Ozon and Yandex Market search/comparison"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hermes marketplace-mcp" }]
dependencies = [
  "mcp>=1.3",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.0",
  "httpx[socks]>=0.27.0",
  "anyio>=4.4.0",
  "ddgs>=9.8.0,<10",
  "hive-web-runtime @ git+https://github.com/YegorMy/hive-web.git"
]

[project.scripts]
marketplaces-mcp = "marketplaces_mcp.mcp_server.server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
